Alignement fix

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -65,6 +65,7 @@
 		color: rgba(255,255,255,0.9);
 		text-shadow: 0 1px 5px #000;
 		z-index: 150;
+		text-align: right;
 
 		b {
 			font-size: 22px;
